// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.mediator.admin.v30;

import "com/digitalasset/canton/admin/sequencer/v30/sequencer_connection.proto";

service MediatorInitializationService {
  // Initialize a Mediator service
  // If the Mediator is uninitialized it should initialize itself with the provided configuration
  // If the Mediator is already initialized then verify the request is for the synchronizer we're running against,
  // if correct then just return the current key otherwise fail.
  rpc InitializeMediator(InitializeMediatorRequest) returns (InitializeMediatorResponse);
}

message InitializeMediatorRequest {
  // the synchronizer identifier
  string synchronizer_id = 1;

  // how should the member connect to the synchronizer sequencer
  com.digitalasset.canton.admin.sequencer.v30.SequencerConnections sequencer_connections = 2; // required

  // how strictly we should validate the connection to the sequencer
  com.digitalasset.canton.admin.sequencer.v30.SequencerConnectionValidation sequencer_connection_validation = 3; // required
}

message InitializeMediatorResponse {}
